Make sure header is wrapping due to admin_notices hook adding the notice to the header.

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,6 +2,7 @@
 
 	.sui-header {
 		display: flex;
+		flex-wrap: wrap;
 		align-items: center;
 		position: relative;
 		line-height: 1;
@@ -30,9 +31,6 @@
 				margin-right: 0;
 				margin-top: 10px;
 			}
-		}
-		@include media( max-width, md ) {
-			flex-wrap: wrap;
 		}
 
 	}
